<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SafeFolder</string>

    <string name="fieldHint"></string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="send_via">Send Via</string>
    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="copy">Copy</string>
    <string name="save">Save</string>
    <string name="forward">Forward</string>
    <string name="print">Print</string>

    <string name="title_activity_decrypt">DecryptActivity</string>
    <string name="title_activity_launch">LaunchActivity</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string name="launch_activity_header">Please sign in to use Safe Folder</string>
    <string name="register_activity_header">Register an account to use Safe Folder</string>

    <string name="email_address_label">E-Mail Address:</string>
    <string name="password_label">Password:</string>
    <string name="first_name_label">First Name:</string>
    <string name="last_name_label">Last Name:</string>

    <string name="remember_me_text">Remember Me</string>
    <string name="register_new_button_text">Register...</string>
    <string name="register_button_text">Register</string>
    <string name="login_button_text">Sign In</string>

    <!-- User Account Preferences -->
    <string name="default_username">michael.sneen@gmail.com</string>
    <string name="the_username"></string>

    <string name="default_password">password</string>
    <string name="the_password"></string>

    <string name="remember_me_default">yes</string>
    <string name="remember_me"></string>

</resources>
