<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.coretech.safefolder.safefolder.RegisterActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="15dp">

            <TextView
                android:text="@string/register_activity_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:inputType="none"
                android:id="@+id/activity_header"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/first_name_label"
                android:id="@+id/firstNameLabel"
                android:layout_column="0"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/firstNameText"
                android:layout_column="1"
                android:inputType="text"/>

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/last_name_label"
                android:id="@+id/lastNameLabel"
                android:layout_column="0"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lastNameText"
                android:layout_column="1"
                android:inputType="text"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/email_address_label"
                android:id="@+id/emailAddressLabel"
                android:layout_column="0"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/emailAddressText"
                android:layout_column="1"
                android:inputType="text"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/password_label"
                android:id="@+id/passwordLabel"
                android:layout_column="0"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/passwordText"
                android:layout_column="1"
                android:inputType="text"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_button_text"
                android:id="@+id/registerButton"
                android:layout_marginTop="15dp"
                android:layout_column="1"/>
        </TableRow>
    </TableLayout>

</RelativeLayout>
